<resources>
    <string name="app_name">HelloGeekBrains!!!</string>
    <string name="my_button">Press my button</string>
    <string name="Switch">Switch</string>
    <string name="text">Text</string>
    <string name="textPersonName">Person Name</string>
    <string name="phone">Phone</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="person_name">Person name</string>
    <string name="email_address">Email address</string>
    <string name="switch_activity">Switch activity</string>
    <string name="checkbox">CheckBox</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="title_activity_side">SideActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_back">Go back</string>
    <string name="its_a_life">Its a LIFE!!!</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_calendar" />
</resources>